--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<head>
 		<meta charset="UTF-8">
 		<title>Los Soprano</title>
-		<base href="http://localhost/uo264883/practica1/">
+		<base href="https://blluci.github.io/">
 		<meta name=application_name content="Los Soprano">
 		<meta name=author content="Lucía Blanco Llera">
 		<meta name=description content="Information about tv show Los Soprano">
