--- a/concepcion.html
+++ b/concepcion.html
@@ -4,11 +4,12 @@
 	<head>
 		<meta charset="UTF-8">
 		<title>Los Soprano</title>
-		<base href="http://localhost/uo264883/practica1/">
+		<base href="https://blluci.github.io/">
 		<meta name=application_name content="Los Soprano">
 		<meta name=author content="Lucía Blanco Llera">
 		<meta name=description content="Information about tv show Los Soprano">
 		<meta name=keywords content="Los Soprano, HBO, serie, David Chase, mafia, James Gandolfini, Edie Falco">
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<link rel="stylesheet" type="text/css" href="styles/style.css">
 	</head>
 	
@@ -83,8 +84,14 @@
 				<p>
 			Más información:
 				</p>
-				<a href="https://es.hboespana.com/series/the-sopranos/103aae84-b40c-4d86-bf79-b9521c06b640">HBO</a>
-				<a href="https://www.filmaffinity.com/es/film402150.html">FilmAffinity</a>
+				<a href="https://es.hboespana.com/series/the-sopranos/103aae84-b40c-4d86-bf79-b9521c06b640">HBO</a><br>
+				<a href="https://www.filmaffinity.com/es/film402150.html">FilmAffinity</a><br>
+				<a href="https://validator.w3.org/check?uri=referer">
+				<img src="https://www.w3.org/html/logo/badge/html5-badge-h-solo.png"
+				alt=" HTML5 Válido!" height=" 64" width="63" /></a><br>
+				<a href=" http://jigsaw.w3.org/css-validator/check/referer ">
+				<img src=" http://jigsaw.w3.org/css-validator/images/vcss"
+				alt="Valid CSS!" height="31" width="88" /></a>
 			</address>
 		</footer>
 		
