--- a/index.html
+++ b/index.html
@@ -65,14 +65,14 @@
 			<nav>
 				<p>OTROS APARTADOS:</p>
 				<ul>
-					<li><a href="argumento.html">Argumento</a></li><br>
-					<li><a href="concepcion.html">Concepcion</a></li><br>
-					<li><a href="apertura.html">Apertura</a></li><br>
-					<li><a href="localizaciones.html">Localizaciones</a></li><br>
-					<li><a href="personajes_principales.html">Personajes</a></li><br>
-					<li><a href="temporadas.html">Temporadas</a></li><br>
-					<li><a href="premios.html">Premios</a></li><br>
-					<li><a href="libros.html">Libros</a></li><br>
+					<li><a href="argumento.html">Argumento</a></li>
+					<li><a href="concepcion.html">Concepcion</a></li>
+					<li><a href="apertura.html">Apertura</a></li>
+					<li><a href="localizaciones.html">Localizaciones</a></li>
+					<li><a href="personajes_principales.html">Personajes</a></li>
+					<li><a href="temporadas.html">Temporadas</a></li>
+					<li><a href="premios.html">Premios</a></li>
+					<li><a href="libros.html">Libros</a></li>
 				</ul>
 			</nav>
 		</aside>
