--- a/personajes_secundarios.html
+++ b/personajes_secundarios.html
@@ -73,7 +73,7 @@
 				<a href="https://www.filmaffinity.com/es/film402150.html">FilmAffinity</a><br>
 				<a href="https://validator.w3.org/check?uri=referer">
 				<img src="https://www.w3.org/html/logo/badge/html5-badge-h-solo.png"
-				alt=" HTML5 Válido!" height="64" width="63" /></a><br>
+				alt=" HTML5 Válido!" height="64" width="63" /></a>
 				<a href=" http://jigsaw.w3.org/css-validator/check/referer ">
 				<img src=" http://jigsaw.w3.org/css-validator/images/vcss"
 				alt="Valid CSS!" height="31" width="88" /></a>
