--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 			equipo de rodaje eran desconocidos para el público general, pero sus carreras experimentaron
 			un gran éxito tras Los Soprano.
 				</p>
-				<img src="multimedia/lossoprano_img2.jpg" alt="Picture of Los Soprano">
+				<img src="multimedia/lossoprano_img2.jpg" alt="Picture of Los Soprano" width=555 height=340 >
 			</section>
 		</main>
 		
