--- a/personajes_principales.html
+++ b/personajes_principales.html
@@ -19,7 +19,7 @@
 		<section>
 			<h2>Personajes Principales y Reparto</h2>
 			
-			<img src="multimedia/lossoprano_img1.jpg" alt="Los Soprano">
+			<img src="multimedia/lossoprano_img1.jpg" alt="Picture of Los Soprano" width="555" height="340" >
 			
 			<nav><p>Anexo:<a href=personajes_secundarios.html>Personajes Secundarios</a></p></nav>
 			<p>
