--- a/temporadas.html
+++ b/temporadas.html
@@ -24,7 +24,7 @@
 			</p>
 			<table>
 				<tr>
-					<th colspan=2>  </th>
+					<th colspan=2>  .</th>
 					<th colspan=2>  Emisión original</th>
 				</tr>
 				<tr>
