--- a/temporadas.html
+++ b/temporadas.html
@@ -24,6 +24,10 @@
 			</p>
 			<table>
 				<tr>
+					<th colspan=2>  .</th>
+					<th colspan=2>  Emisión original</th>
+				</tr>
+				<tr>
 					<th> Temporada</th>
 					<th> Episodios</th>
 					<th> Primera emisión</th>
