--- a/argumento.html
+++ b/argumento.html
@@ -10,7 +10,7 @@
 		<meta name=description content="Information about tv show Los Soprano">
 		<meta name=keywords content="Los Soprano, HBO, serie, David Chase, mafia, James Gandolfini, Edie Falco">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<link rel="stylesheet" type="text/css" href="styles/style.css">
+		<link rel="stylesheet" type="text/css" href="styles/my_first_style.css">
 	</head>
 	
 	<body>
