--- a/temporadas.html
+++ b/temporadas.html
@@ -28,10 +28,10 @@
 					<th colspan=2>  Emisión original</th>
 				</tr>
 				<tr>
-					<th> Temporada</th>
-					<th> Episodios</th>
-					<th> Primera emisión</th>
-					<th> Última emisión</th>
+					<td> Temporada</td>
+					<td> Episodios</td>
+					<td> Primera emisión</td>
+					<td> Última emisión</td>
 				</tr>
 				<tr>
 					<td> 1</td>
