--- a/argumento.html
+++ b/argumento.html
@@ -3,11 +3,11 @@
 
 <head>
 	<meta charset="utf-8" />
-	<base href="https://uo258935.github.io/lucia/">
-	<meta name="description" content="Información sobre la serie Los Soprano">
-	<meta name="keywords" content="Los Soprano,tv,hbo,series">
-	<title>Los Soprano</title>
-	<meta name="autor" content="Lucia Blanco Llera">
+		<base href="https://blluci.github.io/">
+		<meta name=application_name content="Los Soprano">
+		<meta name=author content="Lucía Blanco Llera">
+		<meta name=description content="Information about tv show Los Soprano">
+		<meta name=keywords content="Los Soprano, HBO, serie, David Chase, mafia, James Gandolfini, Edie Falco">
 	<link rel="stylesheet" type="text/css" href="styles/my_first_style.css">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 
